welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:6: error: ';' expected but 'else' found.
	}else if(b!=a && c!=a)
         ^redTicket:8: error: ';' expected but 'else' found.
           else{
           ^redTicket:12: error: Unmatched closing brace '}' ignored here
 }
 ^